
package mysql;

message tb_role_black_shop{
    required uint32 role_id = 1;
    required bytes black_shops = 2;
}
