
package mysql;

message tb_role_center_set{
    required uint32 role_id = 1;
    required uint32 team_auto_agree = 2;
    required uint32 team_auto_join = 3;
    required uint32 team_min_lvl = 4;
    required uint32 team_max_lvl = 5;
}
