
package mysql;

message tb_role_devil{
    required uint32 role_id = 1;
    required bytes stage_info = 2;
    required bytes raid_info = 3;
}
