
package mysql;

message tb_role_gem{
    required uint32 role_id = 1;
    required bytes gems = 2;
}
