
package mysql;

message tb_role_label{
    required uint32 role_id = 1;
    required uint32 label_code = 2;
    required uint32 use_state = 3;
    required uint32 effective_state = 4;
    required uint32 end_date = 5;
}
