
package mysql;

message tb_role_mail{
    required uint32 role_id = 1;
    required bytes mail = 2;
}
