
package mysql;

message tb_role_order{
    required uint32 role_id = 1;
    required uint32 store_id = 2;
    required uint32 count = 3;
    required uint32 type = 4;
    required uint32 time = 5;
}
