
package mysql;

message tb_role_pet{
    required uint32 role_id = 1;
    required bytes pets = 2;
}
