
package mysql;

message tb_role_set{
    required uint32 role_id = 1;
    required bytes shortcut = 2;
}
