
package mysql;

message tb_role_status{
    required uint32 role_id = 1;
    required uint32 pos_map_id = 2;
    required uint32 pos_scene_id = 3;
    required uint32 pos_x = 4;
    required uint32 pos_y = 5;
    required uint32 pos_z = 6;
    required uint32 tmp_map_id = 7;
    required uint32 tmp_scene_id = 8;
    required uint32 tmp_x = 9;
    required uint32 tmp_y = 10;
    required uint32 tmp_z = 11;
    required uint32 mditation = 12;
    required uint32 riding = 13;
    required uint32 findpath = 14;
    required uint32 fight = 15;
    required uint32 auto_play = 16;
    required uint32 pvp_mode = 17;
    required uint32 attk_mode = 18;
    required uint32 alive = 19;
    required uint32 online = 20;
    required uint32 red_goods_num = 21;
    required uint32 blue_goods_num = 22;
    required uint32 complete_task_num = 23;
    required uint32 abandon_task_num = 24;
    required uint32 receve_task_num = 25;
    required uint32 is_package_full = 26;
    required uint32 buf_furious = 27;
    required uint32 buf_hurted = 28;
    required uint32 buf_week = 29;
    required uint32 buf_giddy = 30;
    required uint32 buf_faint = 31;
    required uint32 buf_fired = 32;
    required uint32 buf_posion = 33;
    required uint32 buf_blood = 34;
    required uint32 buf_injury = 35;
    required uint32 buf_cursed = 36;
    required uint32 buf_blind = 37;
    required uint32 buf_maimed = 38;
    required uint32 buf_silent = 39;
    required uint32 buf_disarm = 40;
    required uint32 buf_slowly = 41;
    required uint32 buf_dec_harm = 42;
    required uint32 buf_rej_harm = 43;
    required uint32 buf_turn_body = 44;
    required uint32 strength = 45;
    required uint32 status = 46;
    required uint32 created_date = 47;
    required uint32 tmp_scene_inst_id = 48;
    required uint32 tmp_scene_inst_time = 49;
    required uint32 spa_action_times = 50;
    required uint32 spa_last_time = 51;
    required uint32 arena_last_chall_time = 52;
    required uint32 arena_has_times = 53;
    required uint32 arena_buy_times = 54;
    required uint32 test_rewards = 55;
    required uint32 unlimited_fly = 56;
}
